K8s/Portfolio/Portfolio-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  portfolio-service
spec:
  selector:
    app:  portfolio
    tier: frontend
  ports:
    - port: 80
